# Generated by Django 5.0.3 on 2024-04-05 01:35

from django.db import migrations, models


class Migration(migrations.Migration):

    initial = True

    dependencies = []

    operations = [
        migrations.CreateModel(
            name="WorkoutType",
            fields=[
                (
                    "id",
                    models.BigAutoField(
                        auto_created=True,
                        primary_key=True,
                        serialize=False,
                        verbose_name="ID",
                    ),
                ),
                ("created_at", models.DateTimeField(auto_now_add=True)),
                ("updated_at", models.DateTimeField(auto_now=True)),
                ("name", models.CharField(max_length=255)),
                (
                    "category",
                    models.CharField(
                        choices=[
                            ("cardio", "Cardio"),
                            ("strength", "Strength"),
                            ("flexibility", "Flexibility"),
                            ("balance", "Balance"),
                            ("endurance", "Endurance"),
                            ("power", "Power"),
                            ("speed", "Speed"),
                            ("agility", "Agility"),
                            ("coordination", "Coordination"),
                            ("reaction_time", "Reaction Time"),
                            ("muscle_mass", "Muscle Mass"),
                            ("weight_loss", "Weight Loss"),
                            ("weight_gain", "Weight Gain"),
                            ("tone", "Tone"),
                            ("rehabilitation", "Rehabilitation"),
                            ("prehabilitation", "Prehabilitation"),
                            ("functional", "Functional"),
                            ("sports_specific", "Sports Specific"),
                            ("general_fitness", "General Fitness"),
                            ("other", "Other"),
                        ],
                        default="general_fitness",
                        max_length=255,
                    ),
                ),
            ],
            options={
                "ordering": ["-created_at"],
                "abstract": False,
            },
        ),
    ]
