# Generated by Django 5.0.3 on 2024-04-05 01:37

import django.db.models.deletion
import shortuuid.django_fields
from django.conf import settings
from django.db import migrations, models


class Migration(migrations.Migration):

    dependencies = [
        ("core", "0001_initial"),
        migrations.swappable_dependency(settings.AUTH_USER_MODEL),
    ]

    operations = [
        migrations.CreateModel(
            name="Workout",
            fields=[
                (
                    "id",
                    models.BigAutoField(
                        auto_created=True,
                        primary_key=True,
                        serialize=False,
                        verbose_name="ID",
                    ),
                ),
                ("created_at", models.DateTimeField(auto_now_add=True)),
                ("updated_at", models.DateTimeField(auto_now=True)),
                (
                    "pid",
                    shortuuid.django_fields.ShortUUIDField(
                        alphabet="abcdefghijklmnopqrstuvqxyz",
                        length=8,
                        max_length=26,
                        prefix="",
                        unique=True,
                    ),
                ),
                ("name", models.CharField(max_length=100)),
                ("start_time", models.TimeField(blank=True, null=True)),
                ("start_date", models.DateField(blank=True, null=True)),
                ("duration", models.DurationField(blank=True, null=True)),
                ("calories_burned", models.FloatField(blank=True, null=True)),
                ("distance", models.FloatField(blank=True, null=True)),
                ("pace", models.FloatField(blank=True, null=True)),
                ("elevation", models.FloatField(blank=True, null=True)),
                ("steps", models.PositiveIntegerField(blank=True, null=True)),
                ("notes", models.TextField(blank=True, null=True)),
                ("heart_rate", models.PositiveIntegerField(blank=True, null=True)),
                (
                    "author",
                    models.ForeignKey(
                        on_delete=django.db.models.deletion.CASCADE,
                        to=settings.AUTH_USER_MODEL,
                    ),
                ),
                (
                    "type",
                    models.ForeignKey(
                        on_delete=django.db.models.deletion.CASCADE,
                        to="core.workouttype",
                    ),
                ),
            ],
            options={
                "ordering": ["-created_at"],
                "abstract": False,
            },
        ),
    ]
